[package]
name = "starknet_api"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/starkware-libs/starknet-api"
license = "Apache-2.0"
license-file = "LICENSE"
description = "Starknet Rust types related to computation and execution."

[features]
default = ["std"]
std = ["serde_json/std", "hex/std", "primitive-types/std", "parity-scale-codec?/std"]
parity-scale-codec = ["dep:parity-scale-codec", "primitive-types/codec"]
testing = []

[dependencies]
once_cell = { version = "1.17.1", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }
cairo-lang-casm-contract-class = { git = "https://github.com/keep-starknet-strange/cairo", branch = "no_std-support", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = [
    "serde_no_std",
] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
indexmap = { git = "https://github.com/bluss/indexmap", rev = "ca5f848e10c31e80aeaad0720d14aa2f6dd6cfb1", features = [
    "serde",
], default-features = false }
serde = { version = "1.0.130", features = [
    "derive",
    "rc",
], default-features = false }
serde_json = { version = "1.0.81", default-features = false, features = [
    "alloc",
] }
starknet-crypto = { version = "0.5.1", default-features = false }
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
    "from",
] }
hashbrown = { version = "0.13.2", features = ["serde"] }

parity-scale-codec = { version = "3.6.0", default-features = false, features = [
    "derive",
], optional = true }

[dev-dependencies]
assert_matches = "1.5.0"
